--- a/helm-charts/vector/values.yaml
+++ b/helm-charts/vector/values.yaml
@@ -1,50 +1,50 @@
 role: Agent
 
-service:
-  enabled: false
-
 env:
-  - name: OPENOBSERVE_USER
+  - name: ZO_ROOT_USER_EMAIL
     valueFrom:
       secretKeyRef:
-        name: openobserve-creds
-        key: username
-  - name: OPENOBSERVE_PASS                                                    
+        name: openobserve-root-creds
+        key: ZO_ROOT_USER_EMAIL
+  - name: ZO_ROOT_USER_PASSWORD                                                    
     valueFrom:
       secretKeyRef:     
-        name: openobserve-creds
-        key: password
+        name: openobserve-root-creds
+        key: ZO_ROOT_USER_PASSWORD
   - name: EXCLUDED_NAMESPACES
     value: otel-collector,vector,default,kube-node-lease,kube-public,arc-runners
   - name: ERROR_FILTERED_NAMESPACES
-    value: openobserve,kube-system,cnpg-system,grafana,rabbitmq-system,tempo,victoria-metrics,mongodb,redis,rabbitmq
+    value: kube-system,cert-manager,openobserve,cnpg-system,grafana,rabbitmq-system,tempo,victoria-metrics,mongodb,redis,rabbitmq,external-dns
   - name: ROUTED_NAMESPACES
-    value: kube-system,openobserve,cnpg-system,grafana,cert-manager,rabbitmq-system,tempo,victoria-metrics,mongodb,redis,rabbitmq
-  - name: APP_NAME
+    value: kube-system,cert-manager,openobserve,cnpg-system,grafana,rabbitmq-system,tempo,victoria-metrics,mongodb,redis,rabbitmq,external-dns
+  - name: PROJECT
     valueFrom:
       configMapKeyRef:
-        name: otel-env-labels
-        key: APP_NAME
-  - name: APP_VERSION
+        name: cluster-labels
+        key: project
+  - name: APP
     valueFrom:
       configMapKeyRef:
-        name: otel-env-labels
-        key: APP_VERSION
+        name: cluster-labels
+        key: app
   - name: REGION
     valueFrom:
       configMapKeyRef:
-        name: otel-env-labels
-        key: REGION
+        name: cluster-labels
+        key: region
   - name: CLUSTER_ID
     valueFrom:
       configMapKeyRef:
-        name: otel-env-labels
-        key: CLUSTER_ID
-  - name: DEPLOYMENT_ENV
+        name: cluster-labels
+        key: cluster_id
+  - name: ENV
     valueFrom:
       configMapKeyRef:
-        name: otel-env-labels
-        key: DEPLOYMENT_ENV
+        name: cluster-labels
+        key: env
+
+service:
+  enabled: false
 
 resources:
   requests:
@@ -54,15 +54,20 @@ resources:
     cpu: 100m
     memory: 384Mi
 
-hostVolumeMounts:
-  - name: var-log
-    hostPath: /var/log
-    mountPath: /var/log
-    readOnly: true
-
 customConfig:
   data_dir: /vector-data-dir
-  
+
+  # -----------------------------------------------------------------------
+  # 1. SOURCES
+  # -----------------------------------------------------------------------
+  sources:
+    kubernetes_logs:
+      type: kubernetes_logs
+    
+    system_logs:
+      type: file
+      include: [/var/log/*log]
+
   # -----------------------------------------------------------------------
   # 1. SOURCES
   # -----------------------------------------------------------------------
@@ -91,11 +96,11 @@ customConfig:
           # Handle MongoDB JSON format mapping
           # Only apply if we haven't found a standard 'level' field yet
           if .level == null {
-            if .s == I { .level = INFO }
-            if .s == W { .level = WARNING }
-            if .s == E { .level = ERROR }
-            if .s == F { .level = FATAL }
-            if .s == D { .level = DEBUG }
+            if .s == "I" { .level = "INFO" }
+            if .s == "W" { .level = "WARNING" }
+            if .s == "E" { .level = "ERROR" }
+            if .s == "F" { .level = "FATAL" }
+            if .s == "D" { .level = "DEBUG" }
           }
         }
         
@@ -137,10 +142,10 @@ customConfig:
           if .level == null {
             match, err = parse_regex(.message, r'\d{2}:\d{2}:\d{2}\.\d+\s+(?P<symbol>[*#.\-])\s+')
             if err == null {
-              if match.symbol == * { .level = INFO }
-              if match.symbol == # { .level = WARNING }
-              if match.symbol == - { .level = ERROR }
-              if match.symbol == . { .level = DEBUG }
+              if match.symbol == "*" { .level = "INFO" }
+              if match.symbol == "#" { .level = "WARNING" }
+              if match.symbol == "-" { .level = "ERROR" }
+              if match.symbol == "." { .level = "DEBUG" }
             }
           }
           
@@ -152,13 +157,13 @@ customConfig:
             if err == null {
               # Normalize to uppercase to match other patterns
               level_lower = to_string(match.level)
-              if level_lower == error { .level = ERROR }
-              if level_lower == info { .level = INFO }
-              if level_lower == warning { .level = WARNING }
-              if level_lower == warn { .level = WARNING }
-              if level_lower == debug { .level = DEBUG }
-              if level_lower == critical { .level = CRITICAL }
-              if level_lower == fatal { .level = FATAL }
+              if level_lower == "error" { .level = "ERROR" }
+              if level_lower == "info" { .level = "INFO" }
+              if level_lower == "warning" { .level = "WARNING" }
+              if level_lower == "warn" { .level = "WARNING" }
+              if level_lower == "debug" { .level = "DEBUG" }
+              if level_lower == "critical" { .level = "CRITICAL" }
+              if level_lower == "fatal" { .level = "FATAL" }
             }
           }
 
@@ -170,34 +175,33 @@ customConfig:
             if err == null {
               level_lower = to_string(match.level)
               level_lower = downcase(level_lower)
-              if level_lower == error { .level = ERROR }
-              if level_lower == info { .level = INFO }
-              if level_lower == warning { .level = WARNING }
-              if level_lower == warn { .level = WARNING }
-              if level_lower == debug { .level = DEBUG }
-              if level_lower == critical { .level = CRITICAL }
-              if level_lower == fatal { .level = FATAL }
+              if level_lower == "error" { .level = "ERROR" }
+              if level_lower == "info" { .level = "INFO" }
+              if level_lower == "warning" { .level = "WARNING" }
+              if level_lower == "warn" { .level = "WARNING" }
+              if level_lower == "debug" { .level = "DEBUG" }
+              if level_lower == "critical" { .level = "CRITICAL" }
+              if level_lower == "fatal" { .level = "FATAL" }
             }
           }
         }
         
-        .level = .level || UNKNOWN
+        .level = .level || "UNKNOWN"
 
     # Step 2: Filter by level/namespace/pod (rules applied in order)
     spam_filter:
       type: remap
-      inputs: [unified_parser]
+      inputs: ["unified_parser"]
       source: |
         # Define helper variables
         ns = to_string(.kubernetes.pod_namespace) ?? ""
-        pod = to_string(.kubernetes.pod_name) ?? ""
-        level = to_string(.level) ?? UNKNOWN
+        level = to_string(.level) ?? "UNKNOWN"
         
         # Parse namespace lists from environment variables
-        excluded_ns_str = get_env_var(EXCLUDED_NAMESPACES) ?? ""
+        excluded_ns_str = get_env_var("EXCLUDED_NAMESPACES") ?? ""
         excluded_ns_list = split(excluded_ns_str, ",")
         
-        error_filtered_ns_str = get_env_var(ERROR_FILTERED_NAMESPACES) ?? ""
+        error_filtered_ns_str = get_env_var("ERROR_FILTERED_NAMESPACES") ?? ""
         error_filtered_ns_list = split(error_filtered_ns_str, ",")
 
         # Rule 0: Exclude specific namespaces entirely (logs are not needed)
@@ -206,12 +210,12 @@ customConfig:
         # Rule 0.5: Filter MongoDB exporter broken pipe and no route to host errors (noisy, non-actionable)
         container = to_string(.kubernetes.container_name) ?? ""
         msg = to_string(.message) ?? ""
-        if container == metrics && (match(msg, r'(?i)broken pipe') || match(msg, r'(?i)no route to host')) {
+        if container == "metrics" && (match(msg, r'(?i)broken pipe') || match(msg, r'(?i)no route to host')) {
           abort
         }
 
         # Rule 1: System logs → WARNING+ only
-        if .source_type == file {
+        if .source_type == "file" {
           if !match(level, r'(?i)^(WARNING|ERROR|CRITICAL|FATAL)$') { abort }
         } else {
           # Rule 2: Infra namespaces → ERROR+ only
@@ -225,7 +229,7 @@ customConfig:
       type: remap
       inputs: [spam_filter]
       source: |
-        if .source_type == kubernetes_logs {
+        if .source_type == "kubernetes_logs" {
           # 1. Promote key metadata to top-level
           .pod_namespace = .kubernetes.pod_namespace
           .pod_name = .kubernetes.pod_name
@@ -235,35 +239,36 @@ customConfig:
           # 2. Remove the heavy nested metadata object
           del(.kubernetes)
         
-        } else if .source_type == file {
-          .node_name = get_env_var(HOSTNAME) ?? UNKNOWN_NODE
+        } else if .source_type == "file" {
+          .node_name = get_env_var("HOSTNAME") ?? "unknown_node"
         }
         
         # 3. Add resource attributes from environment variables
-        .app_name = get_env_var(APP_NAME) ?? ""
-        .app_version = get_env_var(APP_VERSION) ?? ""
-        .region = get_env_var(REGION) ?? ""
-        .cluster_id = get_env_var(CLUSTER_ID) ?? ""
-        .env = get_env_var(DEPLOYMENT_ENV) ?? ""
+        .project = get_env_var("PROJECT") ?? ""
+        .app = get_env_var("APP") ?? ""
+        .region = get_env_var("REGION") ?? ""
+        .cluster_id = get_env_var("CLUSTER_ID") ?? ""
+        .env = get_env_var("ENV") ?? ""
     
     # Step 4: Route logs to different streams based on namespace
     log_router:
       type: route
       inputs: [field_slimmer]
       route:
-        kube_system: .pod_namespace == kube-system
-        openobserve: .pod_namespace == openobserve
-        cnpg_system: .pod_namespace == cnpg-system
-        grafana: .pod_namespace == grafana
-        cert_manager: .pod_namespace == cert-manager
-        rabbitmq_system: .pod_namespace == rabbitmq-system
-        tempo: .pod_namespace == tempo
-        victoria-metrics: .pod_namespace == victoria-metrics
-        mongodb: .pod_namespace == mongodb
-        redis: .pod_namespace == redis
-        rabbitmq: .pod_namespace == rabbitmq
-        system: .source_type == file
-        other_namespaces: .source_type == kubernetes_logs && !includes(split(get_env_var(ROUTED_NAMESPACES) ?? "", ","), .pod_namespace)
+        kube_system: '.pod_namespace == "kube-system"'
+        openobserve: '.pod_namespace == "openobserve"'
+        cnpg_system: '.pod_namespace == "cnpg-system"'
+        grafana: '.pod_namespace == "grafana"'
+        cert_manager: '.pod_namespace == "cert-manager"'
+        rabbitmq_system: '.pod_namespace == "rabbitmq-system"'
+        tempo: '.pod_namespace == "tempo"'
+        victoria-metrics: '.pod_namespace == "victoria-metrics"'
+        mongodb: '.pod_namespace == "mongodb"'
+        redis: '.pod_namespace == "redis"'
+        rabbitmq: '.pod_namespace == "rabbitmq"'
+        external-dns: '.pod_namespace == "external-dns"'
+        system: '.source_type == "file"'
+        other_namespaces: '.source_type == "kubernetes_logs" && !includes(split(get_env_var("ROUTED_NAMESPACES") ?? "", ","), .pod_namespace)'
 
 
   # -----------------------------------------------------------------------
@@ -272,161 +277,173 @@ customConfig:
   # -----------------------------------------------------------------------
   sinks:
     # Infra namespaces (ERROR+ only)
-    
+
     sink_kubernetes_kube-system:
       type: http
       inputs: [log_router.kube_system]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/kube-system/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/kube-system/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
     
     sink_kubernetes_openobserve:
       type: http
       inputs: [log_router.openobserve]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/openobserve/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/openobserve/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
     
     sink_kubernetes_cnpg-system:
       type: http
       inputs: [log_router.cnpg_system]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/cnpg-system/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/cnpg-system/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
     
     sink_kubernetes_grafana:
       type: http
       inputs: [log_router.grafana]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/grafana/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/grafana/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
     
     sink_kubernetes_cert-manager:
       type: http
       inputs: [log_router.cert_manager]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/cert-manager/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/cert-manager/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
     
     sink_kubernetes_rabbitmq-system:
       type: http
       inputs: [log_router.rabbitmq_system]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/rabbitmq-system/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/rabbitmq-system/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
 
     sink_kubernetes_tempo:
       type: http
       inputs: [log_router.tempo]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/tempo/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/tempo/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
 
     sink_kubernetes_victoria-metrics:
       type: http
       inputs: [log_router.victoria-metrics]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/victoria-metrics/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/victoria-metrics/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
 
     sink_kubernetes_mongodb:
       type: http
       inputs: [log_router.mongodb]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/mongodb/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/mongodb/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
 
     sink_kubernetes_redis:
       type: http
       inputs: [log_router.redis]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/redis/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/redis/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
 
     sink_kubernetes_rabbitmq:
       type: http
       inputs: [log_router.rabbitmq]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/rabbitmq/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/rabbitmq/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
+
+    sink_kubernetes_external-dns:
+      type: http
+      inputs: [log_router.external-dns]
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/external-dns/_json
+      method: post
+      encoding:
+        codec: json
+      auth:
+        strategy: basic
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
 
     # System logs (WARNING+ only)
     sink_system:
       type: http
       inputs: [log_router.system]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/system_logs/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/system_logs/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
     
     # All other namespaces that we might missed
     sink_kubernetes_other:
       type: http
       inputs: [log_router.other_namespaces]
-      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/SkiesDota/other-namespaces/_json
+      uri: http://o2-openobserve-router.openobserve.svc.cluster.local:5080/api/skies-dota/other-namespaces/_json
       method: post
       encoding:
         codec: json
       auth:
         strategy: basic
-        user: ${OPENOBSERVE_USER}
-        password: ${OPENOBSERVE_PASS}
+        user: ${ZO_ROOT_USER_EMAIL}
+        password: ${ZO_ROOT_USER_PASSWORD}
