--- a/ansible/playbooks/deploy-vector.yaml
+++ b/ansible/playbooks/deploy-vector.yaml
@@ -27,18 +27,18 @@
           apiVersion: v1
           kind: Secret
           metadata:
-            name: openobserve-creds
+            name: openobserve-root-creds
             namespace: vector
           stringData:
-            username: "{{ lookup('env', 'ZO_ROOT_USER_EMAIL') }}"
-            password: "{{ lookup('env', 'ZO_ROOT_USER_PASSWORD') }}"
+            ZO_ROOT_USER_EMAIL: "{{ lookup('env', 'ZO_ROOT_USER_EMAIL') }}"
+            ZO_ROOT_USER_PASSWORD: "{{ lookup('env', 'ZO_ROOT_USER_PASSWORD') }}"
       no_log: true
 
     - name: Deploy Vector
       kubernetes.core.helm:
         name: vector
         chart_ref: oci://ghcr.io/vectordotdev/helm-charts/vector
-        chart_version: 0.49.0
+        chart_version: 0.50.0
         release_namespace: vector
         create_namespace: true
         wait: true
